# robotex18

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  port_forward.sh
begin/: CMakeLists.txt  begin.launch  package.xml
begin/src/: begin.cpp  printer.cpp
core/: CMakeLists.txt  lookup.csv  package.xml
core/include/: debugcommands.hpp  defines.hpp  lookup_table.hpp  memory.hpp  speedcontrol.hpp  statemachine.hpp  utility.hpp  wheelcontrol.hpp
core/launch/: core.launch  loc.launch  python_control.launch
core/msg/: Ball.msg  Bob.msg  Command.msg
core/src/: core.cpp  debugcommands.cpp  memory.cpp  refereecontrol.cpp  speedcontrol.cpp  statemachine.cpp  wheelcontrol.cpp
cubeobot/inc/: statemachine.hpp
cubeobot/src/: core.cpp  wheelcontrol.cpp
first/: CMakeLists.txt  package.xml
first/msg/: Text.msg
first/src/: file.cpp  listener.cpp  talker.cpp
localization/: CMakeLists.txt  package.xml
localization/launch/: localization.launch
localization/src/: aruco_localize.py  char3.py  charucoBoardCalibration.py  charucoBoardCalibrationLive.py  communication.py  motor_movement.py  state_machine0.py  talker.py  testPID.py
localization/tmp/pycharm_project_36/: state_machine0.py  talker.py  testPID.py
serial/: CMakeLists.txt  package.xml
serial/launch/: serial.launch
serial/msg/: WheelSpeed.msg
serial/src/: serial.cpp
vision/: CMakeLists.txt  package.xml  ths.txt  ths_basket.txt  ths_basket_blue.txt  ths_basket_pink.txt
vision/include/: ball_detection.hpp
vision/launch/: realsense.launch  start.launch
vision/msg/: BasketRelative.msg  Break.msg  Output_type.msg  Threshold.msg
vision/src/: .camsim.cpp.swp  ball_detection.cpp  basket_detection.cpp  camsim.cpp  realsense.cpp
vision/srv/: Objinf.srv
